# ballouard

./: .env.example  .gitignore  CLAUDE.md  GAP_ANALYSIS.md  Michael-Mansshardt.md  README.md  TODO.md  index.html  netlify.toml  pyproject.toml  run.sh  server-preview.js  wrangler.toml  xerjoff_tmp.json
.claude/commands/: auto-ship.md
.wrangler/cache/: pages.json
agents/: __init__.py  base.py  client_success.py  design_preview.py  lead_researcher.py  outreach.py  sales.py  web_designer.py
config/: settings.py
functions/_lib/: helpers.js  security.js  security_new.js  supabase.js
functions/api/: request-redesign.js
functions/dashboard/: [token].js
functions/onboard/: [token].js
lighthouse/: myst-mmxx.html
models/: __init__.py  base.py  database.py  deal.py  lead.py  message.py  project.py
pipeline/: cli.py  orchestrator.py  prospect_auto.py  webhooks.py
previews/: aureli.html  internacional.html  le-boutique.html  neruda.html  purecious.html  wby.html
previews/btsd/: index.html
scripts/: main.js
server/: app.py
services/: deployment.py  email_sender.py  google_maps.py  messaging.py  payments.py  website_auditor.py
styles/: main.css
templates/: emails.py
tests/: test_models.py  test_templates.py  test_website_auditor.py
utils/: llm.py  logging.py
website/: 404.html  DEPLOY_TEST.txt  README.md  _dashboard.html  _headers  _onboard.html  _redirects  admin.html  app.css  app.html  app.js  auth.html  dashboard.html  demo-new.html  demo-old.html  index.html  main.js  package.json  privacy.html  robots.txt  sitemap.xml  styles.css  terms.html
(+112 files in other folders)
